--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -1898,6 +1898,12 @@
   "settings_purple_box": {
     "message": "Tracker-Tally"
   },
+  "settings_show_redirect_tracking_dialogs": {
+    "message": "Ask me to confirm before visiting a site that redirects me through a tracker"
+  },
+  "settings_show_redirect_tracking_dialogs_tooltip": {
+    "message": "Redirect tracking means that instead of visiting a website directly, you are first redirected through another site that may try to track you (e.g. by placing a cookie). In contrast to normal tracking, you cannot block the request without breaking the functionality."
+  },
   "settings_replace_social": {
     "message": "Replace blocked social media buttons with a Ghostery icon"
   },
